chore: fix types for CMS pages

--- a/app/content/drops/prism.mdx
+++ b/app/content/drops/prism.mdx
@@ -19,7 +19,7 @@ image5:
 image6:
 ---
 
-A collection of 20 gradient wallpapers in 6K resolution, perfect for both
+A collection of 20 prism wallpapers in 6K resolution, perfect for both
 desktop and mobile.
 
 If you have any questions/problems, please send me an email:
