feat: navigation + cms setup

--- a/app/content/letters/lean-into-your-interests.mdx
+++ b/app/content/letters/lean-into-your-interests.mdx
@@ -1,3 +1,14 @@
+---
+title: Lean into your interests
+description:
+  A letter to my future self about the importance of starting before you feel
+  ready.
+category1:
+category2:
+category3:
+published: 2024-07-14
+---
+
 I hear a lot of people talk about how they want to start a side hustle or
 business but don’t know where to start.
 
