feat: complete cms visuals

--- a/app/content/drops/creatorpreneur.mdx
+++ b/app/content/drops/creatorpreneur.mdx
@@ -1,6 +1,6 @@
 ---
-name: Gradient Wallpapers
-category: Wallpapers
+name: Creatorpreneur - Creator Framer Template
+category: Framer Template
 seoDescription:
   Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
 demoLink:
@@ -19,11 +19,14 @@ image5:
 image6:
 ---
 
-A collection of 20 gradient wallpapers in 6K resolution, perfect for both
-desktop and mobile.
+Creatorpreneur is the ultimate Framer Template for creators.
 
-If you have any questions/problems, please send me an email:
+Benefits:
+
+- Easily sell digital products with LemonSqueezy
+- Write beautiful newsletters/blogs
+- Quickly create a custom Linktree page for your socials
+- High-speed performance (97 lighthouse score)
+
+If you have any questions, please send an email to
 [cole@caccamise.com](mailto:cole@caccamise.com)
-
-For personal use only. These files are not meant for reselling, distribution, or
-commercial use.
