--- a/app/content/drops/prism.mdx
+++ b/app/content/drops/prism.mdx
@@ -1,6 +1,6 @@
 ---
 name: Prism Wallpapers
-category: wallpapers
+category: Wallpapers
 seoDescription:
   Prism wallpapers showcased on the Cole Caccamise YouTube channel.
 demoLink:
@@ -19,13 +19,11 @@ image5:
 image6:
 ---
 
-A collection of 20 prism wallpapers in 6K resolution, perfect for both
-desktop and mobile.
+A collection of over 20 high-quality wallpapers perfect for both desktop and
+mobile.
 
 If you have any questions/problems, please send me an email:
-cole@colecaccamise.com
+[cole@caccamise.com](mailto:cole@caccamise.com)
 
 For personal use only. These files are not meant for reselling, distribution, or
 commercial use.
-
-<Video url='https://youtu.be/WLwLxkpc4Hs' />
