feat(drops): update images

--- a/app/content/drops/gradient.mdx
+++ b/app/content/drops/gradient.mdx
@@ -1,20 +1,19 @@
 ---
 name: Gradient Wallpapers
 category: Wallpapers
-seoDescription:
-  Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
+seoDescription: Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
 demoLink:
 oldPrice: 14
 price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://framerusercontent.com/images/ee0YTse2gPaFdBi0PiKcSixBwUQ.png?scale-down-to=1024
-thumbnailImage: /images/drops/gradient/featured.png
-image1: https://framerusercontent.com/images/ee0YTse2gPaFdBi0PiKcSixBwUQ.png?scale-down-to=1024
-image2: https://framerusercontent.com/images/kc6NMeKYcTguaiqcRBmZgtHUs.png?scale-down-to=1024
-image3:
-image4:
+socialImage: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Social%20Graph%20Image%20-%20Gradient.png
+thumbnailImage: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Product%20Promo%20Image%20-%20Gradient.png
+image1: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Product%20Promo%20Image%20-%20Gradient.png
+image2: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Desktop%20Promo%20Images.png
+image3: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Phone%20Promo%20Images.png
+image4: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/UW%20Promo%20Images.png
 image5:
 image6:
 ---
