--- a/app/content/drops/creatorpreneur.mdx
+++ b/app/content/drops/creatorpreneur.mdx
@@ -1,22 +1,21 @@
 ---
 name: Creatorpreneur - Creator Framer Template
 category: Framer Template
-seoDescription:
-  Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
+seoDescription: Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
 demoLink:
 oldPrice: 14
 price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://framerusercontent.com/images/ee0YTse2gPaFdBi0PiKcSixBwUQ.png?scale-down-to=1024
-thumbnailImage: /images/drops/gradient/featured.png
-image1: https://framerusercontent.com/images/ee0YTse2gPaFdBi0PiKcSixBwUQ.png?scale-down-to=1024
-image2: https://framerusercontent.com/images/kc6NMeKYcTguaiqcRBmZgtHUs.png?scale-down-to=1024
-image3:
-image4:
-image5:
-image6:
+socialImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.avif
+thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.avif
+image1: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+1.webp
+image2: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+2.webp
+image3: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+3.webp
+image4: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+4.webp
+image5: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+5.webp
+image6: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+6.webp
 ---
 
 Creatorpreneur is the ultimate Framer Template for creators.
