feat(letters): update letter links

--- a/app/content/letters/how-i-invalidated-my-first-saas-idea.mdx
+++ b/app/content/letters/how-i-invalidated-my-first-saas-idea.mdx
@@ -4,7 +4,7 @@ description: And what I learned from it.
 published: 2024-07-28
 ---
 
-Last year I watched a video from Simon Hoiberg where he revealed a super simple
+Last year I watched a video from [Simon Hoiberg](https://www.youtube.com/watch?v=aSMxdBVTcLg) where he revealed a super simple
 strategy to validate new SaaS ideas - run meta ads to a landing page where you
 described the problem you want to solve, then have an email sign up form to
 request access.
@@ -33,7 +33,7 @@ page.
 
 All in I ended up spending $58.54:
 
-$10.37 on a domain from Porkbun (useowly.com)
+$10.37 on a domain from Porkbun (useowly.com)[https://useowly.com]
 
 $10 for website hosting (Framer’s mini plan that gives you one page and a custom
 domain)
@@ -41,7 +41,7 @@ domain)
 $38.17 on Meta ads (various placements across Instagram & Facebook)
 
 The ads got turned on late Sunday night and would now send visitors to the
-landing page where they could enter their name within a tally.so form.
+landing page where they could enter their name within a [tally.so](https://tally.so) form.
 
 Within the form were three questions:
 
@@ -104,24 +104,24 @@ The Single Ultrawide Desk Setup for 2024
 
 I finally got rid of my top monitor and my setup has never looked better.
 
-Things I’ve found interesting
+## Things I’ve found interesting
 
-links to valuable stuff I thought was worth sharing. amazon links are
-affiliated.
+_links to valuable stuff I thought was worth sharing. amazon links are
+affiliated._
 
-Wooden pen holder - I’m a sucker for desk items like these. The wood looks great
+[Wooden pen holder](https://caccamise.link/pen-holder) - I’m a sucker for desk items like these. The wood looks great
 in my setup.
 
-MacBook Stand - I bought another one of these stands for my home setup. Now that
+[MacBook Stand](https://caccamise.link/mac-stand) - I bought another one of these stands for my home setup. Now that
 I’m only using a single monitor it’s nice to still have my mac’s display if I
 need it
 
-Dell XPS 14 - I was sent this laptop to include in a video later this year but
+[Dell XPS 14](https://www.bestbuy.com/site/dell-xps-14-14-5-3-2k-oled-touch-laptop-intel-core-ultra-7-evo-edition-32gb-memory-nvidia-geforce-rtx-4050-platinum/6575149.p?skuId=6575149) - I was sent this laptop to include in a video later this year but
 I’m insanely impressed. This thing has an OLED screen, 32GB of memory, and THE
 best trackpad on a windows laptop. It’s nearly identical to the macs, haptic
 feedback and all. It can even sort of run Cyberpunk.
 
-Elgato Stream Deck - You’d think the stream deck would only be made for
+[Elgato Stream Deck](https://caccamise.link/stream-deck) - You’d think the stream deck would only be made for
 streamers, but it works great on mac and lets you map physical buttons and knobs
 to tons of actions or apps. It’s pretty expensive but I can see this being
 useful for editing.
