fix: sort drops by position

--- a/app/content/drops/creatorpreneur.mdx
+++ b/app/content/drops/creatorpreneur.mdx
@@ -16,6 +16,7 @@ image3: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+3.webp
 image4: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+4.webp
 image5: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+5.webp
 image6: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+6.webp
+position: 3
 ---
 
 Creatorpreneur is the ultimate Framer Template for creators.
