--- a/app/content/drops/gradient.mdx
+++ b/app/content/drops/gradient.mdx
@@ -16,6 +16,7 @@ image3: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Phone%20
 image4: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/UW%20Promo%20Images.png
 image5:
 image6:
+position: 1
 ---
 
 A collection of 20 gradient wallpapers in 6K resolution, perfect for both
