--- a/app/content/drops/prism.mdx
+++ b/app/content/drops/prism.mdx
@@ -1,22 +1,22 @@
 ---
 name: Prism Wallpapers
 category: Wallpapers
-seoDescription:
-  Prism wallpapers showcased on the Cole Caccamise YouTube channel.
+seoDescription: Prism wallpapers showcased on the Cole Caccamise YouTube channel.
 demoLink:
 oldPrice: 14
 price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://framerusercontent.com/images/ee0YTse2gPaFdBi0PiKcSixBwUQ.png?scale-down-to=1024
-thumbnailImage: /images/drops/prism/featured.png
-image1: https://framerusercontent.com/images/ee0YTse2gPaFdBi0PiKcSixBwUQ.png?scale-down-to=1024
-image2:
-image3:
+socialImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.avif
+thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.avif
+image1: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.avif
+image2: https://colecaccamise.s3.amazonaws.com/drops/prism/desktop.avif
+image3: https://colecaccamise.s3.amazonaws.com/drops/prism/mobile.avif
 image4:
 image5:
 image6:
+position: 2
 ---
 
 A collection of over 20 high-quality wallpapers perfect for both desktop and
