--- a/app/content/drops/gradient.mdx
+++ b/app/content/drops/gradient.mdx
@@ -8,12 +8,12 @@ price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Social%20Graph%20Image%20-%20Gradient.png
-thumbnailImage: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Product%20Promo%20Image%20-%20Gradient.png
-image1: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Product%20Promo%20Image%20-%20Gradient.png
-image2: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Desktop%20Promo%20Images.png
-image3: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/Phone%20Promo%20Images.png
-image4: https://colecaccamise.s3.us-east-1.amazonaws.com/drops/gradient/UW%20Promo%20Images.png
+socialImage: https://colecaccamise.s3.amazonaws.com/drops/gradient/Social+Graph+Image+-+Gradient.png
+thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/gradient/Product+Promo+Image+-+Gradient.png
+image1: https://colecaccamise.s3.amazonaws.com/drops/gradient/Product+Promo+Image+-+Gradient.png
+image2: https://colecaccamise.s3.amazonaws.com/drops/gradient/Desktop+Promo+Images.png
+image3: https://colecaccamise.s3.amazonaws.com/drops/gradient/Phone+Promo+Images.png
+image4: https://colecaccamise.s3.amazonaws.com/drops/gradient/UW+Promo+Images.png
 image5:
 image6:
 position: 1
