feat(drops): finish drops metadata

--- a/app/content/drops/creatorpreneur.mdx
+++ b/app/content/drops/creatorpreneur.mdx
@@ -8,14 +8,14 @@ price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.avif
-thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.avif
-image1: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+1.webp
-image2: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+2.webp
-image3: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+3.webp
-image4: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+4.webp
-image5: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+5.webp
-image6: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+6.webp
+socialImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.png
+thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.png
+image1: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+1.png
+image2: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+2.png
+image3: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+3.png
+image4: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+4.png
+image5: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+5.png
+image6: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+6.png
 position: 3
 ---
 
