--- a/app/content/drops/prism.mdx
+++ b/app/content/drops/prism.mdx
@@ -8,11 +8,11 @@ price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.avif
-thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.avif
-image1: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.avif
-image2: https://colecaccamise.s3.amazonaws.com/drops/prism/desktop.avif
-image3: https://colecaccamise.s3.amazonaws.com/drops/prism/mobile.avif
+socialImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
+thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
+image1: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
+image2: https://colecaccamise.s3.amazonaws.com/drops/prism/desktop.png
+image3: https://colecaccamise.s3.amazonaws.com/drops/prism/mobile.png
 image4:
 image5:
 image6:
