fix: cleanup newsletter

--- a/app/content/drops/creatorpreneur.mdx
+++ b/app/content/drops/creatorpreneur.mdx
@@ -2,12 +2,12 @@
 name: Creatorpreneur - Creator Framer Template
 category: Framer Template
 seoDescription: Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
-demoLink:
-oldPrice: 14
-price: 9
+demoLink: https://creatorpreneur.framer.website/
+oldPrice: 49
+price: 39
 popular: false
 affiliate: false
-lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
+lemonSqueezyLink: https://store.websignr.com/buy/2b0bc309-1646-4a46-80a5-6746bdeeb49f
 socialImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.png
 thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.png
 image1: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+1.png
