--- a/app/content/drops/gradient.mdx
+++ b/app/content/drops/gradient.mdx
@@ -7,7 +7,7 @@ oldPrice: 14
 price: 9
 popular: false
 affiliate: false
-lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
+lemonSqueezyLink: https://store.colecaccamise.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
 socialImage: https://colecaccamise.s3.amazonaws.com/drops/gradient/Social+Graph+Image+-+Gradient.png
 thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/gradient/Product+Promo+Image+-+Gradient.png
 image1: https://colecaccamise.s3.amazonaws.com/drops/gradient/Product+Promo+Image+-+Gradient.png
