--- a/app/content/drops/prism.mdx
+++ b/app/content/drops/prism.mdx
@@ -7,7 +7,7 @@ oldPrice: 14
 price: 9
 popular: false
 affiliate: false
-lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
+lemonSqueezyLink: https://store.colecaccamise.com/buy/95e6acab-07f5-4742-8f14-6933e9f04579
 socialImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
 thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
 image1: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
