--- a/app/content/drops/youtube-notion-template.mdx
+++ b/app/content/drops/youtube-notion-template.mdx
@@ -7,7 +7,7 @@ oldPrice: 14
 price: 9
 popular: false
 affiliate: false
-lemonSqueezyLink: https://colecaccamise.lemonsqueezy.com/buy/d1a3ffc7-7c97-47ce-a210-035db121aa46
+lemonSqueezyLink: https://store.colecaccamise.com/buy/d1a3ffc7-7c97-47ce-a210-035db121aa46
 socialImage: https://colecaccamise.s3.amazonaws.com/drops/youtube-notion-template/promo.png
 thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/youtube-notion-template/promo.png
 image1: https://colecaccamise.s3.amazonaws.com/drops/youtube-notion-template/promo.png
