--- a/app/content/letters/how-i-invalidated-my-first-saas-idea.mdx
+++ b/app/content/letters/how-i-invalidated-my-first-saas-idea.mdx
@@ -63,15 +63,14 @@ There was then a “Learn more” button that went straight to the landing page.
 
 Here’s what the Facebook ad looked like:
 
+![Owly Facebook Ad](https://colecaccamise.s3.amazonaws.com/letters/how-i-invalidated-my-first-saas-idea/owly+facebook+ad.png)
+
 The results from the ads were:
 
-3,536 impressions
-
-2,610 reach
-
-76 link clicks ($0.50 per click)
-
-~2% click through rate (2-5 is apparently “good”)
+- 3,536 impressions
+- 2,610 reach
+- 76 link clicks ($0.50 per click)
+- ~2% click through rate (2-5 is apparently “good”)
 
 I could have ran them longer to get more data but I felt I had learned what I
 wanted to.
@@ -87,6 +86,8 @@ Humata, a similar tool to this would-be SaaS.
 It makes sense given the topic of the video, but all remaining 5 had came from
 that video.
 
+![Tally submissions](https://colecaccamise.s3.amazonaws.com/letters/how-i-invalidated-my-first-saas-idea/tally+screenshot.png)
+
 The website in total received 154 page views from Sunday-Thursday until I turned
 off the ads, which would be just about a 3% sign up rate in total.
 
@@ -100,7 +101,9 @@ course in how to copy-write and run ads.
 I already have a few new ideas that I think are much more viable business-wise
 that I plan to run these same tests for.
 
-The Single Ultrawide Desk Setup for 2024
+## The Single Ultrawide Desk Setup for 2024
+
+<Video url="https://youtu.be/vZBlPAu2_mk" />
 
 I finally got rid of my top monitor and my setup has never looked better.
 
