feat(stack): create pc and camera stack pages

--- a/app/content/stack/pc.mdx
+++ b/app/content/stack/pc.mdx
@@ -3,3 +3,27 @@ title: PC Build
 description: My gaming rig
 seoDescription: Cole Caccamise's Gaming PC build.
 ---
+
+[Alienware 32" 4K 240 Hz Monitor](https://caccamise.link/alienware) - The best monitor I've ever gamed on. The picture quality is fantastic and the refresh rate is insane for games that can push it.
+
+[Lian Li O11 Dynamic Mini](https://caccamise.link/pc-case) - I've used this case for a couple of years now and like it. Always has been easy to build in.
+
+[RTX 4080 Gigabyte Eagle OC](https://caccamise.link/4080) - An overpriced but powerful card. Runs RT at 100 FPS w/ DLSS 3 in most titles.
+
+[i7 13700K](https://caccamise.link/13700k) - This could probably use an upgrade but I haven't had any issues.
+
+[Kraken 280mm Cooler](https://caccamise.link/kraken) - I've had the x62 since I built my first PC in 2019. It still runs well.
+
+[Lian Li Fans](https://caccamise.link/fans) - These look great with the O11.
+
+[Spider-Man Funko](https://caccamise.link/future-foundation) - Your friendly neighborhood funko pop.
+
+[MSI Motherboard](https://caccamise.link/motherboard) - Sleak design. It's a motherboard.
+
+[Trident Z Royal RAM (32GB)](https://caccamise.link/ram) - Gorgeous RAM.
+
+[1000W SFX PSU](https://caccamise.link/psu) - One of the few SFX PSU's with this capacity.
+
+[1TB Intel SSD](https://caccamise.link/intel-ssd) - Great value-for-money M.2.
+
+[1TB Samsung SSD](https://caccamise.link/samsung-ssd) - A fast drive.
