fix: update creatorpreneur meta

--- a/app/content/drops/creatorpreneur.mdx
+++ b/app/content/drops/creatorpreneur.mdx
@@ -1,7 +1,7 @@
 ---
 name: Creatorpreneur - Creator Framer Template
 category: Framer Template
-seoDescription: Gradient wallpapers showcased on the Cole Caccamise YouTube channel.
+seoDescription: Creatorpreneur is the ultimate Framer Template for creators. Easily sell digital products, write blog articles, and share links to your socials.
 demoLink: https://creatorpreneur.framer.website/
 oldPrice: 49
 price: 39
