feat(stack): update vscode stack with postman extension

--- a/app/content/stack/vscode.mdx
+++ b/app/content/stack/vscode.mdx
@@ -23,6 +23,8 @@ position: 4
 
 [Dotenv](https://marketplace.visualstudio.com/items?itemName=dotenv.dotenv-vscode) - This extension keeps your env files synced across machines.
 
+[Postman](https://marketplace.visualstudio.com/items?itemName=Postman.postman-for-vscode) - Test APIs without leaving the editor.
+
 [Draw.io](https://marketplace.visualstudio.com/items?itemName=hediet.vscode-drawio) - Great for creating diagrams within VSCode.
 
 [Figma](https://marketplace.visualstudio.com/items?itemName=figma.figma-vscode-extension) - View any figma file within VSCode. You can even copy the code if you have a pro subscription.
