refactor: move content directory out of app

--- a/content/letters/how-i-invalidated-my-first-saas-idea.mdx
+++ b/content/letters/how-i-invalidated-my-first-saas-idea.mdx
@@ -103,7 +103,7 @@ that I plan to run these same tests for.
 
 ## The Single Ultrawide Desk Setup for 2024
 
-<Video url="https://youtu.be/vZBlPAu2_mk" />
+<VideoPlayer url="https://youtu.be/vZBlPAu2_mk" />
 
 I finally got rid of my top monitor and my setup has never looked better.
 
