--- a/content/letters/how-i-started-taking-action.mdx
+++ b/content/letters/how-i-started-taking-action.mdx
@@ -52,7 +52,7 @@ I’ll report back in a week or two with the results.
 
 ## 9 AI Tools I Actually Use
 
-<Video url="https://youtu.be/WLwLxkpc4Hs" />
+<VideoPlayer url="https://youtu.be/WLwLxkpc4Hs" />
 
 I wouldn’t call myself an AI fanboy but there are certain things that I find it great for. This video covers those.
 
