--- a/content/letters/now-not-how.mdx
+++ b/content/letters/now-not-how.mdx
@@ -56,7 +56,7 @@ Start when you don’t feel ready, you’ll probably surprise yourself.
 
 ## The One Monitor Setup
 
-<Video url="https://youtu.be/ZhXhApf93ss" />
+<VideoPlayer url="https://youtu.be/ZhXhApf93ss" />
 
 I’ve been building out this second setup at my parents house over the last couple of years and it gets better each time I come. It’s not “minimal” but I like it.
 
