--- a/content/stack/camera.mdx
+++ b/content/stack/camera.mdx
@@ -2,6 +2,7 @@
 title: Camera Gear
 description: Everything I use to film videos.
 seoDescription: Cole Caccamise's camera gear.
+position: 5
 ---
 
 ### Camera
