--- a/content/stack/pc.mdx
+++ b/content/stack/pc.mdx
@@ -2,6 +2,7 @@
 title: PC Build
 description: My gaming rig
 seoDescription: Cole Caccamise's Gaming PC build.
+position: 6
 ---
 
 [Alienware 32" 4K 240 Hz Monitor](https://caccamise.link/alienware) - The best monitor I've ever gamed on. The picture quality is fantastic and the refresh rate is insane for games that can push it.
