--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -1,7 +1,7 @@
 ---
 title: VSCode Setup
 description: The extensions, theme, and settings I use.
-seoDescription: Cole Caccamise's home office desk setup.
+seoDescription: Cole Caccamise's VSCode theme, extensions, and settings.
 feedbackText: What's your VSCode setup?
 feedbackPreview: Extensions, theme, etc.
 position: 4
