feat(stack): add wsl extension to vscode page

--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -39,6 +39,8 @@ position: 4
 
 [Todo Highlight](https://marketplace.visualstudio.com/items?itemName=wayou.vscode-todo-highlight) - Highlights TODOs and FIXMEs so they're easier to find.
 
+[WSL](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-wsl) - Allows you to open a folder in WSL. Must-have when working on my windows machine.
+
 ### MacOS Icon
 
 <Link
