fix: fix link styling and update vscode page

--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -11,11 +11,11 @@ position: 4
 
 ### Theme
 
-[“Minimal” theme from nichabosh](https://vscodethemes.com/e/nichabosh.minimal/minimal)
+[“Minimal” theme](https://vscodethemes.com/e/nichabosh.minimal/minimal) - Simple and clean.
 
-[Glyph for vscode (I use the “Legacy” version)](https://marketplace.visualstudio.com/items?itemName=lewxdev.vscode-glyph)
+[Glyph for vscode](https://marketplace.visualstudio.com/items?itemName=lewxdev.vscode-glyph) - I use the “Legacy” version
 
-[Material Product Icons](https://marketplace.visualstudio.com/items?itemName=PKief.material-product-icons)
+[Material Product Icons](https://marketplace.visualstudio.com/items?itemName=PKief.material-product-icons) - I like them better than the default ones.
 
 ### Extensions
 
@@ -55,7 +55,7 @@ How to change icon:
 1. Hold <kbd>⌘</kbd> and click VSCode in your dock
 2. With it now revealed in Finder, select it and hit <kbd>⌘ + I</kbd>
 3. This opens up the info about VSCode, just drag the .icns file into the icon preview in the <b><u>top left</u></b> corner (next to 'Visual Studio Code' text)
-4. Open your terminal app, type in `killall Dock` — this restarts the Dock and shows the updated icon
+4. Open your terminal app (I recommend [Warp](https://caccamise.link/warp)), type in `killall Dock` — this restarts the Dock and shows the updated icon
 
 <VideoPlayer url="https://colecaccamise.s3.amazonaws.com/stack/vscode/vscode.mp4" />
 
