feat(stack): update tailwind intellisense copy

--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -35,7 +35,7 @@ position: 4
 
 [Remote Explorer](https://marketplace.visualstudio.com/items?itemName=ms-vscode.remote-explorer) - Great if you work with VMs often.
 
-[Tailwind CSS IntelliSense](https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss) - See the raw CSS for each Tailwind class.
+[Tailwind CSS IntelliSense](https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss) - Convenient autocomplete and lets you see the raw CSS for each Tailwind class.
 
 [Todo Highlight](https://marketplace.visualstudio.com/items?itemName=wayou.vscode-todo-highlight) - Highlights TODOs and FIXMEs so they're easier to find.
 
