fix: use local video

--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -57,7 +57,7 @@ How to change icon:
 3. This opens up the info about VSCode, just drag the .icns file into the icon preview in the <b><u>top left</u></b> corner (next to 'Visual Studio Code' text)
 4. Open your terminal app (I recommend [Warp](https://caccamise.link/warp)), type in `killall Dock` — this restarts the Dock and shows the updated icon
 
-<VideoPlayer url="https://colecaccamise.s3.amazonaws.com/stack/vscode/vscode.mp4" />
+<VideoPlayer url="/videos/stack/vscode/vscode.mp4" />
 
 <span className="text-sm">
   Video recorded with [screen.studio](https://caccamise.link/screen)
