fix: update setup links

--- a/content/stack/setup.mdx
+++ b/content/stack/setup.mdx
@@ -25,11 +25,11 @@ position: 1
 
 [Shure SM7b](https://caccamise.link/sm7b) - A classic microphone, it's what I use for all my voiceovers. Sounds great.
 
-[Cloudlifter](https://caccamise.link/wave) - Basically have to get this if you use the sm7b.
+[Cloudlifter](https://caccamise.link/cloud) - Basically have to get this if you use the sm7b.
 
 [Shure MV7](https://caccamise.link/mv7) - Probably the mic I'd recommend to most people who want great quality audio. A bit cheaper than the SM7b and doesn't require an interface (though I use one with it).
 
-[Elgato Wave Mic Arm](https://caccamise.link/wave) - This thing looks sleek. It doesn't tighten super well though.
+[Elgato Wave Mic Arm](https://caccamise.link/elgato-wave) - This thing looks sleek. It doesn't tighten super well though.
 
 ### Monitor
 
