feat: add testimonial to drops page

--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -17,6 +17,8 @@ image4:
 image5:
 image6:
 position: 2
+testimonialName: Florian
+testimonial: Thank you for the wallpapers! I like how clean they look on a mac thats why I purchased them. They are slick!
 ---
 
 A collection of over 20 high-quality wallpapers perfect for both desktop and
