fix: change cta copy

--- a/content/letters/how-i-stay-patient.mdx
+++ b/content/letters/how-i-stay-patient.mdx
@@ -37,7 +37,7 @@ I’ve been testing the Dell XPS 14 recently and it’s pleasantly surprised me.
 I just dropped a new wavy wallpaper pack and these are my favorite ones yet.
 
 <Link href="/drops/wave" className="btn btn-primary">
-  <>Download Now</>
+  <>Buy Now</>
 </Link>
 
 ## Things I’ve found interesting
