feat: update prism testimonial

--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -17,8 +17,9 @@ image4:
 image5:
 image6:
 position: 2
-testimonialName: Florian
-testimonial: Thank you for the wallpapers! I like how clean they look on a mac thats why I purchased them. They are slick!
+testimonialName: Charlie
+testimonial: Amazing wallpapers. Delivered as promised and very professional.
+testimonialUrl: https://senja.io/p/cole-caccamise/t/97654053-722d-424f-8d2d-663e873e0c22
 ---
 
 A collection of over 20 high-quality wallpapers perfect for both desktop and
@@ -28,4 +29,4 @@ If you have any questions/problems, please send me an email:
 [cole@caccamise.com](mailto:cole@caccamise.com)
 
 For personal use only. These files are not meant for reselling, distribution, or
-commercial use.
+commercial use**.**
