chore: replace drop images with cloudfront versions

--- a/content/drops/creatorpreneur.mdx
+++ b/content/drops/creatorpreneur.mdx
@@ -8,14 +8,14 @@ price: 39
 popular: false
 affiliate: false
 lemonSqueezyLink: https://store.websignr.com/buy/2b0bc309-1646-4a46-80a5-6746bdeeb49f
-socialImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.png
-thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/promo.png
-image1: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+1.png
-image2: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+2.png
-image3: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+3.png
-image4: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+4.png
-image5: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+5.png
-image6: https://colecaccamise.s3.amazonaws.com/drops/creatorpreneur/image+6.png
+socialImage: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/promo.png
+thumbnailImage: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/promo.png
+image1: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/image+1.png
+image2: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/image+2.png
+image3: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/image+3.png
+image4: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/image+4.png
+image5: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/image+5.png
+image6: https://d27j5b63daowy8.cloudfront.net/drops/creatorpreneur/image+6.png
 position: 5
 ---
 
