--- a/content/drops/prism.mdx
+++ b/content/drops/prism.mdx
@@ -8,11 +8,11 @@ price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://store.colecaccamise.com/buy/95e6acab-07f5-4742-8f14-6933e9f04579
-socialImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
-thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
-image1: https://colecaccamise.s3.amazonaws.com/drops/prism/promo.png
-image2: https://colecaccamise.s3.amazonaws.com/drops/prism/desktop.png
-image3: https://colecaccamise.s3.amazonaws.com/drops/prism/mobile.png
+socialImage: https://d27j5b63daowy8.cloudfront.net/drops/prism/promo.png
+thumbnailImage: https://d27j5b63daowy8.cloudfront.net/drops/prism/promo.png
+image1: https://d27j5b63daowy8.cloudfront.net/drops/prism/promo.png
+image2: https://d27j5b63daowy8.cloudfront.net/drops/prism/desktop.png
+image3: https://d27j5b63daowy8.cloudfront.net/drops/prism/mobile.png
 image4:
 image5:
 image6:
