--- a/content/drops/wave.mdx
+++ b/content/drops/wave.mdx
@@ -8,12 +8,12 @@ price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://store.colecaccamise.com/buy/55c7a8d2-8085-4d51-9329-d035415407f5
-socialImage: https://colecaccamise.s3.amazonaws.com/drops/wave/promo.png
-thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/wave/promo.png
-image1: https://colecaccamise.s3.amazonaws.com/drops/wave/promo.png
-image2: https://colecaccamise.s3.amazonaws.com/drops/wave/Desktop.png
-image3: https://colecaccamise.s3.amazonaws.com/drops/wave/Mobile.png
-image4: https://colecaccamise.s3.amazonaws.com/drops/wave/UW.png
+socialImage: https://d27j5b63daowy8.cloudfront.net/drops/wave/promo.png
+thumbnailImage: https://d27j5b63daowy8.cloudfront.net/drops/wave/promo.png
+image1: https://d27j5b63daowy8.cloudfront.net/drops/wave/promo.png
+image2: https://d27j5b63daowy8.cloudfront.net/drops/wave/Desktop.png
+image3: https://d27j5b63daowy8.cloudfront.net/drops/wave/Mobile.png
+image4: https://d27j5b63daowy8.cloudfront.net/drops/wave/UW.png
 image5:
 image6:
 position: 1
