--- a/content/drops/youtube-notion-template.mdx
+++ b/content/drops/youtube-notion-template.mdx
@@ -8,10 +8,10 @@ price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://store.colecaccamise.com/buy/d1a3ffc7-7c97-47ce-a210-035db121aa46
-socialImage: https://colecaccamise.s3.amazonaws.com/drops/youtube-notion-template/promo.png
-thumbnailImage: https://colecaccamise.s3.amazonaws.com/drops/youtube-notion-template/promo.png
-image1: https://colecaccamise.s3.amazonaws.com/drops/youtube-notion-template/promo.png
-image2: https://colecaccamise.s3.amazonaws.com/drops/youtube-notion-template/image+2.png
+socialImage: https://d27j5b63daowy8.cloudfront.net/drops/youtube-notion-template/promo.png
+thumbnailImage: https://d27j5b63daowy8.cloudfront.net/drops/youtube-notion-template/promo.png
+image1: https://d27j5b63daowy8.cloudfront.net/drops/youtube-notion-template/promo.png
+image2: https://d27j5b63daowy8.cloudfront.net/drops/youtube-notion-template/image+2.png
 image3:
 image4:
 image5:
