chore: update cloudfront url for images

--- a/content/letters/what-i-learned-from-52-weekly-newsletters.mdx
+++ b/content/letters/what-i-learned-from-52-weekly-newsletters.mdx
@@ -56,13 +56,13 @@ With YouTube, I started because I love tech and wanted to share my thoughts abou
 
 ## New Tech I’m Excited About
 
-![iPhone 16 Pro](https://d27j5b63daowy8.cloudfront.net/letters/what-i-learned-from-52-weekly-newsletters/iphone-16-pro.png)
+![iPhone 16 Pro](https://assets.colecaccamise.com/letters/what-i-learned-from-52-weekly-newsletters/iphone-16-pro.png)
 
 I pre-ordered the iPhone 16 Pro Max on Friday and while I’ve loved the S24 Ultra, I’m looking forward to using iOS again for a bit.
 
 It’s a small update this year but I can’t wait to try the Camera Control button.
 
-![PS5 Pro](https://d27j5b63daowy8.cloudfront.net/letters/what-i-learned-from-52-weekly-newsletters/ps5-pro.png)
+![PS5 Pro](https://assets.colecaccamise.com/letters/what-i-learned-from-52-weekly-newsletters/ps5-pro.png)
 
 The PS5 Pro was just announced this week and I’m still shocked about the price. I’m thinking of pre-ordering one to make a video on as I’m interested to see if the quality difference is noticeable in person.
 
