--- a/content/drops/gradient.mdx
+++ b/content/drops/gradient.mdx
@@ -8,12 +8,12 @@ price: 9
 popular: false
 affiliate: false
 lemonSqueezyLink: https://store.colecaccamise.com/buy/bd20c0d9-3f33-4656-a6c4-300f704a49d5
-socialImage: https://d27j5b63daowy8.cloudfront.net/drops/gradient/Social+Graph+Image+-+Gradient.png
-thumbnailImage: https://d27j5b63daowy8.cloudfront.net/drops/gradient/Product+Promo+Image+-+Gradient.png
-image1: https://d27j5b63daowy8.cloudfront.net/drops/gradient/Product+Promo+Image+-+Gradient.png
-image2: https://d27j5b63daowy8.cloudfront.net/drops/gradient/Desktop+Promo+Images.png
-image3: https://d27j5b63daowy8.cloudfront.net/drops/gradient/Phone+Promo+Images.png
-image4: https://d27j5b63daowy8.cloudfront.net/drops/gradient/UW+Promo+Images.png
+socialImage: https://assets.colecaccamise.com/drops/gradient/Social+Graph+Image+-+Gradient.png
+thumbnailImage: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
+image1: https://assets.colecaccamise.com/drops/gradient/Product+Promo+Image+-+Gradient.png
+image2: https://assets.colecaccamise.com/drops/gradient/Desktop+Promo+Images.png
+image3: https://assets.colecaccamise.com/drops/gradient/Phone+Promo+Images.png
+image4: https://assets.colecaccamise.com/drops/gradient/UW+Promo+Images.png
 image5:
 image6:
 position: 3
