--- a/content/stack/development.mdx
+++ b/content/stack/development.mdx
@@ -35,7 +35,7 @@ position: 2
 
 [Vercel](https://vercel.com) - Where I host all of my frontend projects. By far the easiest way to host Next.js and take advantage of Vercel's features (like edge functions and storage).
 
-[Railway](https://railway.app) - Where I'll be hosting my backend APIs. I've heard it called "The Vercel for Backend".
+[Railway](https://caccamise.link/railway) - Where I'll be hosting my backend APIs. I've heard it called "The Vercel for Backend".
 
 [Supabase](https://supabase.com) - The PostgreSQL database I use for all of my projects. It's easy to build with and they handle auth with minimal setup.
 
