chore: update stack metadata

--- a/content/stack/camera.mdx
+++ b/content/stack/camera.mdx
@@ -1,7 +1,7 @@
 ---
-title: Camera Gear
+name: Camera Gear
 description: Everything I use to film videos.
-seoDescription: Cole Caccamise's camera gear.
+seo_description: Cole Caccamise's camera gear.
 position: 5
 ---
 
