--- a/content/stack/development.mdx
+++ b/content/stack/development.mdx
@@ -1,9 +1,9 @@
 ---
-title: Development Stack
+name: Development Stack
 description: All of the apps, tools, and services I use to build my projects.
-seoDescription: Cole Caccamise's tech stack.
-feedbackText: What's your tech stack?
-feedbackPreview: Language, framework, etc.
+seo_description: Cole Caccamise's tech stack.
+feedback_text: What's your tech stack?
+feedback_preview: Language, framework, etc.
 position: 2
 ---
 
@@ -23,7 +23,9 @@ position: 2
 
 [Next.js](https://nextjs.org) - I use Next as the frontend for all of my projects. Its server-side capabilites make it great for SEO and with small apps a separate backend may not be necessary.
 
-[NestJS](https://nestjs.com) - I've not yet built a backend with Nest but it's what I'll use. I love ExpressJS and it's a more opinonated verison of it. It has some similarites to Rails (which I use at work) which I like.
+[Go/Golang](https://go.dev/) - Go is a clean and performant programming language I use for writing backend APIs. The standard library gives you a lot of the funtionality you'll need.
+
+[Chi](https://go-chi.io/) - A lightweight router for building Go HTTP services. It's built on the standard library and makes writing APIs a little simpler.
 
 [TailwindCSS](https://tailwindcss.com) - A utility-first CSS framework. It's easy to pick up and makes building UIs super fast.
 
@@ -45,9 +47,7 @@ position: 2
 
 [React Email](https://react.email) - A collection of React components to design emails. It's maintained by Resend so it integreates nicely.
 
-[ConvertKit](https://convertkit.com) - The platform I use to send my weekly newsletter. I'm using their API to have custom signup forms on my website.
-
-[Loops](https://loops.so) - I've only played with loops for a few minutes but it's what I'll use when I launch a SaaS. They handle both marketing and transactional emails and have a really nice SDK.
+[Kit](https://kit.com) - The platform I use to send my weekly newsletter. I'm using their API to have custom signup forms on my website.
 
 [Dub.co](https://caccamise.link/dub) - What I use to create shorten and track my links (<Link href='https://caccamise.link/'>caccamise.link</Link>). They also have a powerful API/SDK that is great if you need to implement link sharing in your app.
 
@@ -57,19 +57,15 @@ position: 2
 
 [Lemon Squeezy](https://lemonsqueezy.com) - Where I currently sell my digital products. They handle global tax compliance which saves me a lot of headaches.
 
-[Paddle](https://paddle.com) - A similar platform to Lemon Squeezy that I'm using to sell website templates at <Link href='https://caccamise.link/visibly'>Visibly.co</Link>. It's also what I'll use for handling billing for my SaaS projects.
-
 ### Domains
 
 [Porkbun](https://porkbun.com) - Where I buy almost all of my domains.
 
 [Namecheap](https://namecheap.com) - Any TLDs that aren't available on Porkbun (like .so) I usually look here.
 
-[One Word Domains](https://caccamise.link/domains) - A database of available short domains under lots of TLDs. It's where I found <Link href='https://caccamise.link/visibly'>visibly.co</Link>.
+[One Word Domains](https://caccamise.link/domains) - A database of available short domains under lots of TLDs.
 
 ### Resources
-
-[Visibly.co](https://caccamise.link/visibly) - My upcoming design business. Next.js/TailwindCSS landing page templates for SaaS.
 
 [Refactoring UI](https://www.refactoringui.com) - A great eBook about UI design written by the creators of TailwindCSS that I think is worth a read. It's super actionable and taught me a lot of best practices.
 
