--- a/content/stack/setup.mdx
+++ b/content/stack/setup.mdx
@@ -1,7 +1,7 @@
 ---
-title: Desk Setup
-description: My main workspace
-seoDescription: Cole Caccamise's home office desk setup.
+name: Desk Setup
+description: My main workspace.
+seo_description: Cole Caccamise's home office desk setup.
 position: 1
 ---
 
