--- a/content/stack/vscode.mdx
+++ b/content/stack/vscode.mdx
@@ -1,9 +1,9 @@
 ---
-title: VSCode Setup
+name: VSCode Setup
 description: The extensions, theme, and settings I use.
-seoDescription: Cole Caccamise's VSCode theme, extensions, and settings.
-feedbackText: What's your VSCode setup?
-feedbackPreview: Extensions, theme, etc.
+seo_description: Cole Caccamise's VSCode theme, extensions, and settings.
+feedback_text: What's your VSCode setup?
+feedback_preview: Extensions, theme, etc.
 position: 4
 ---
 
