--- a/content/stack/pc.mdx
+++ b/content/stack/pc.mdx
@@ -1,7 +1,7 @@
 ---
-title: PC Build
-description: My gaming rig
-seoDescription: Cole Caccamise's Gaming PC build.
+name: PC Build
+description: My gaming rig.
+seo_description: Cole Caccamise's Gaming PC build.
 position: 6
 ---
 
