fix: change link in raycast stack

--- a/content/stack/raycast.mdx
+++ b/content/stack/raycast.mdx
@@ -21,7 +21,7 @@ position: 5
 
 [Notion](https://www.raycast.com/notion/notion) - Search, create, and update your Notion pages.
 
-[Warp](https://www.raycast.com/warpdotdev/warp) - I use this extension to "bookmark" directories that I can search and open in [Warp](https://caccamise.link/warp) (my terminal of choice) with Raycast.
+[Warp](https://www.raycast.com/warpdotdev/warp) - I use this extension to "bookmark" directories that I can search and open in [my terminal of choice](https://caccamise.link/warp).
 
 [Port Manager](https://www.raycast.com/lucaschultz/port-manager) - View and close your open ports.
 
